# ingest-benchmark

./: BUILD.md  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: FindLibObs.cmake  MacOSXBundleInfo.plist.in  fix-qt-rpaths.sh  obsconfig.h
include/: plugin-support.h
resources/: plugin.qrc
src/: plugin-main.cpp
src/core/: benchmark-engine.cpp  benchmark-engine.hpp  score-calculator.cpp  score-calculator.hpp
src/network/: net-probe.cpp  net-probe.hpp
src/obs/: obs-integration.cpp  obs-integration.hpp
src/settings/: plugin-settings.cpp  plugin-settings.hpp
src/twitch/: ingest-fetcher.cpp  ingest-fetcher.hpp
src/ui/: benchmark-dock.cpp  benchmark-dock.hpp  results-table.cpp  results-table.hpp
